[workspace]

[package]
# Pseudo-package whose dependencies are imported and buckified
name = "rust-third-party-extra"
version = "0.0.0"
edition = "2021"
publish = false

# Dummy target to keep Cargo happy
[[bin]]
name = "top"
path = "top/main.rs"

# List of packages to be imported, with version constraints, features
# and all options Cargo supports.
[dependencies]
clap = { version = "4.5.3", features = ["derive"] }

# Local patches - typically git references
[patch.crates-io]
